# WSL-Hello-sudo

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  Makefile  README.md  install.sh  pam-config
.github/workflows/: ci.yml  cicd.yaml
src/: auth.rs  bindings.rs  lib.rs
win_components/: .gitignore  Makefile
win_components/WindowsHelloAuthenticator/: WindowsHelloAuthenticator.sln
win_components/WindowsHelloAuthenticator/WindowsHelloAuthenticator/: Program.cs  WindowsHelloAuthenticator.csproj
win_components/WindowsHelloAuthenticator/WindowsHelloAuthenticator/Properties/: AssemblyInfo.cs
win_components/WindowsHelloKeyCredentialCreator/: WindowsHelloKeyCredentialCreator.sln
win_components/WindowsHelloKeyCredentialCreator/WindowsHelloKeyCredentialCreator/: Program.cs  WindowsHelloKeyCredentialCreator.csproj  packages.config
win_components/WindowsHelloKeyCredentialCreator/WindowsHelloKeyCredentialCreator/Properties/: AssemblyInfo.cs
win_hello_bridge/: Cargo.toml
win_hello_bridge/src/: authenticator.rs  creator.rs  error.rs  main.rs
wsl_hello_pam/: Cargo.toml
wsl_hello_pam/src/: auth.rs  lib.rs
