[package]
name = "win_hello_bridge"
version = "2.0.0"
authors = ["Takaya Saeki <abc.tkys+pub@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "WindowsHelloBridge"
path = "src/main.rs"

[dependencies]
windows = { version = "0.27", features = ["alloc", "Foundation", "Security_Credentials", "Security_Cryptography", "Storage_Streams", "UI_Popups", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }