[package]
name = "wsl_hello_pam"
version = "2.0.0"
authors = ["Takaya Saeki <abc.tkys+pub@gmail.com>"]

[lib]
name = "pam_wsl_hello"
crate-type = ["dylib"]

[dependencies]
libc = "0.2.0"
openssl = { version = "0.10.29", features = ["vendored"] }
toml = "0.4"
uuid = { version = "0.5", features = ["v4"] }
